# allianceauth-discordbot

./: .coverage  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  bot_conf.py  coverage.xml  pyproject.toml  runtests.py  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml  publish.yml
.tx/: transifex.yml
aadiscordbot/: CHANGELOG.md  __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  bot.py  bot_tasks.py  checks.py  launcher.py  models.py  providers.py  signals.py  tasks.py  urls.py  views.py
aadiscordbot/cogs/: about.py  abuse.py  abuse_two.py  admin.py  auth.py  eastereggs.py  eightball.py  ess.py  facwar.py  honeypot.py  members.py  models.py  price_check.py  prom_export.py  quote.py  reaction_roles.py  recruit_me.py  remind.py  services.py  sov.py  tickets.py  time.py  timers.py  welcomegoodbye.py  zkill.py
aadiscordbot/cogs/utils/: autocompletes.py  context.py  decorators.py  exceptions.py
aadiscordbot/locale/de/LC_MESSAGES/: django.po
aadiscordbot/locale/en/LC_MESSAGES/: django.po
aadiscordbot/locale/es/LC_MESSAGES/: django.po
aadiscordbot/locale/ru/LC_MESSAGES/: django.po
aadiscordbot/locale/uk/LC_MESSAGES/: django.po
aadiscordbot/management/commands/: run_authbot.py
aadiscordbot/migrations/: 0001_initial.py  0002_auto_20200929_1625.py  0002_auto_20201108_0033.py  0002_message.py  0002_reactionrolebinding_reactionrolemessage.py  0003_authbotconfiguration.py  0004_settings.py  0005_rr_fixes_blank_admins.py  0006_goodbyemessage_welcomemessage.py  0007_quotemessage.py  0008_channels_deleted.py  0009_alter_quotemessage_options.py  0010_alter_discordbot_options_ticketgroups.py  0011_alter_ticketgroups_options_and_more.py  0012_welcomemessage_guild_id.py  0013_goodbyemessage_guild_id.py  0014_alter_goodbyemessage_guild_id_and_more.py  0015_ticketgroups_ticket_channels.py  0016_authbotconfiguration_admin_user_ids_and_more.py  0017_alter_authbotconfiguration_options_and_more.py
aadiscordbot/tests/: __init__.py  task_tests.py  test_utils_auth.py
aadiscordbot/utils/: auth.py
tests/: celery.py  test_settings.py  urls.py
